--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
     <p>🎯 Clique sur les blocs colorés pour gagner des 🏆.</p>
     <p>❌ Évite les blocs gris. Rater un bloc coloré = -3 ❤️</p>
     <p>💾 Trophées et améliorations sont sauvegardés automatiquement.</p>
+    <p>ne quitte pas avant le fin du conpte a rebour</p>
     <button class="btn" onclick="chooseDifficulty('easy')">Facile</button>
     <button class="btn" onclick="chooseDifficulty('medium')">Moyen</button>
     <button class="btn" onclick="chooseDifficulty('impossible')">Impossible</button>
