--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <body>
   <!-- ACCUEIL -->
   <div id="home" class="page active">
-    <h1>autisme Reflex</h1>
+    <h1>Blokz Reflex</h1>
     <p>🎯 Clique sur les blocs colorés pour gagner des 🏆.</p>
     <p>❌ Évite les blocs gris. Rater un bloc coloré = -3 ❤️</p>
     <p>💾 Trophées et améliorations sont sauvegardés automatiquement.</p>
